VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc8Up.err
[8MB/455.5MB][  1%][>                                                 ][1.143MB/s]  [16MB/455.5MB][  3%][=>                                                ][1.067MB/s]  [24MB/455.5MB][  5%][==>                                               ][983kB/s]  [32MB/455.5MB][  7%][===>                                              ][1.032MB/s]  [40MB/455.5MB][  8%][====>                                             ][1.143MB/s]  [48MB/455.5MB][ 10%][=====>                                            ][1.263MB/s]  [56MB/455.5MB][ 12%][======>                                           ][1.333MB/s]  [64MB/455.5MB][ 14%][=======>                                          ][1.28MB/s]  [72MB/455.5MB][ 15%][=======>                                          ][1.22MB/s]  [80MB/455.5MB][ 17%][========>                                         ][1.212MB/s]  [88MB/455.5MB][ 19%][=========>                                        ][1.158MB/s]  [96MB/455.5MB][ 21%][==========>                                       ][1.171MB/s]  [104MB/455.5MB][ 22%][===========>                                      ][1.156MB/s]  [112MB/455.5MB][ 24%][============>                                     ][1.12MB/s]  [120MB/455.5MB][ 26%][=============>                                    ][1.091MB/s]  [128MB/455.5MB][ 28%][==============>                                   ][1.076MB/s]  [136MB/455.5MB][ 29%][==============>                                   ][1.088MB/s]  [144MB/455.5MB][ 31%][===============>                                  ][1.099MB/s]  [152MB/455.5MB][ 33%][================>                                 ][1.134MB/s]  [160MB/455.5MB][ 35%][=================>                                ][1.151MB/s]  [168MB/455.5MB][ 36%][==================>                               ][1.143MB/s]  [176MB/455.5MB][ 38%][===================>                              ][1.121MB/s]  [184MB/455.5MB][ 40%][====================>                             ][1.095MB/s]  [192MB/455.5MB][ 42%][=====================>                            ][1.079MB/s]  [200MB/455.5MB][ 43%][=====================>                            ][1.075MB/s]  [208MB/455.5MB][ 45%][======================>                           ][1.083MB/s]  [216MB/455.5MB][ 47%][=======================>                          ][1.08MB/s]  [224MB/455.5MB][ 49%][========================>                         ][1.087MB/s]  [232MB/455.5MB][ 50%][=========================>                        ][1.094MB/s]  [240MB/455.5MB][ 52%][==========================>                       ][1.101MB/s]  [248MB/455.5MB][ 54%][===========================>                      ][1.112MB/s]  [256MB/455.5MB][ 56%][============================>                     ][1.128MB/s]  [264MB/455.5MB][ 57%][============================>                     ][1.133MB/s]  [272MB/455.5MB][ 59%][=============================>                    ][1.133MB/s]  [280MB/455.5MB][ 61%][==============================>                   ][1.143MB/s]  [288MB/455.5MB][ 63%][===============================>                  ][1.161MB/s]  [296MB/455.5MB][ 64%][================================>                 ][1.189MB/s]  [304MB/455.5MB][ 66%][=================================>                ][1.216MB/s]  [312MB/455.5MB][ 68%][==================================>               ][1.243MB/s]  [320MB/455.5MB][ 70%][===================================>              ][1.27MB/s]  [328MB/455.5MB][ 72%][====================================>             ][1.296MB/s]  [336MB/455.5MB][ 73%][====================================>             ][1.323MB/s]  [344MB/455.5MB][ 75%][=====================================>            ][1.349MB/s]  [352MB/455.5MB][ 77%][======================================>           ][1.375MB/s]  [360MB/455.5MB][ 79%][=======================================>          ][1.401MB/s]  [368MB/455.5MB][ 80%][========================================>         ][1.426MB/s]  [376MB/455.5MB][ 82%][=========================================>        ][1.452MB/s]  [384MB/455.5MB][ 84%][==========================================>       ][1.477MB/s]  [392MB/455.5MB][ 86%][===========================================>      ][1.502MB/s]  [400MB/455.5MB][ 87%][===========================================>      ][1.527MB/s]  [408MB/455.5MB][ 89%][============================================>     ][1.551MB/s]  [416MB/455.5MB][ 91%][=============================================>    ][1.576MB/s]  [424MB/455.5MB][ 93%][==============================================>   ][1.6MB/s]  [432MB/455.5MB][ 94%][===============================================>  ][1.624MB/s]  [440MB/455.5MB][ 96%][================================================> ][1.648MB/s]  [448MB/455.5MB][ 98%][=================================================>][1.672MB/s]  [455.5MB/455.5MB][100%][==================================================][1.687MB/s]  [455.5MB/455.5MB][100%][==================================================][1.687MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_1983/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_1983/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
